ok. den ganze abend mit dem responsiven grid gekämpft bis ich gemerkt habe, das grid gap buggy ist  - sowohl auf safari als auch chrome...

--- a/css/main.css
+++ b/css/main.css
@@ -3,14 +3,13 @@ html {
     overflow-x: hidden;
 }
 
+
+
 body {
-    max-width: 100%;
-    overflow-x: hidden;
     font-family: 'Darker Grotesque', sans-serif;
     font-size: 1.3em;
-    line-height: 1.35em;
-    margin: 20px;
-    width: 100%;
+    margin: 20px auto;
+    width: 95%;
     background-color: white;
 }
 h1 {
@@ -20,31 +19,8 @@ h1 {
     line-height: 1.5em;
     font-family: 'Darker Grotesque', sans-serif;
 }
-h2 {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 1.3em;
-    line-height: 1.3em;
-    font-family: 'Darker Grotesque', sans-serif;
-}
 
-@media screen and (max-width: 600px) {
-    nav {
-        visibility: hidden;
-        height: 0px
-    }
-}
 
-nav ul, footer ul {
-    font-family: 'Darker Grotesque', sans-serif;
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
-}
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 0px;
-}
 a {
     text-decoration: none;
     color: #888888;
@@ -58,6 +34,33 @@ p {
     color: #333;
 }
 
+.site_content {
+
+}
+
+.gridcontainer{
+  display: grid;
+  height: auto;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin: 10px auto;
+  padding: 5px;
+}
+@media only screen and (max-width: 600px){
+  .gridcontainer{
+      display: grid;
+      height: auto;
+      grid-template-columns: 1fr;
+      margin: 10px auto;
+      padding: 5px;
+  }
+}
+
+.contentbox {
+    padding: 5px;
+    height: auto;
+}
+
+
 #closebutton {
     font-size: 1.5em;
     position: absolute;
@@ -66,10 +69,11 @@ p {
 }
 
 .post {
-    border-radius: 4px;
+    border-radius: 3px;
     background: #eeeeee;
-    padding:8px;
+    padding: 9px;
     border: 1px solid #aaaaaa;
+    margin: 3%;
 }
 
 .post:hover {
